--- a/TableBusWinForms/TableBusWinForms/Properties/Resources.resx
+++ b/TableBusWinForms/TableBusWinForms/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="star_active" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\star_active.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gratis-png-iconos-de-computadora-usuario-perfil-inicio-de-sesion-usuario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
